--- a/src/main/resources/templates/professores/index.html
+++ b/src/main/resources/templates/professores/index.html
@@ -41,6 +41,9 @@
                 </table>
             </div>
         </div>
+        <div class="row">
+            <a href="/professor/new">Novo Professor</a>
+        </div>
     </div>
 
 
