--- a/src/main/resources/templates/professores/index.html
+++ b/src/main/resources/templates/professores/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lsta de Professores</title>
+    <title>Lista de Professores</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="row">
-            <a href="/professor/new">Novo Professor</a>
+            <a href="/professores/new">Novo Professor</a>
         </div>
     </div>
 
